policies/docker-cis-5.7-ensure-privileged-ports-are-not-mapped-within-containers.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-5.7-ensure-privileged-ports-are-not-mapped-within-containers
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: The TCP/IP port numbers below 1024 are considered privileged ports.
    Normal users and processes are not allowed to use them for various security reasons.
    Containers are, however, allowed to map their ports to privileged ports.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on the router-default deployment in namespace openshift-ingress
    deployment:
      name: router-default
      scope:
        cluster: ''
        namespace: openshift-ingress
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 5.7: Ensure privileged ports are not mapped within
    containers'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Exposed Node Port
      booleanOperator: AND
      negate: false
      values:
      - value: <= 1024
      - value: '> 0'
  rationale: By default, if the user does not specifically declare a container port
    to host port mapping, the containers ports will be mapped to available non-privileged
    host ports. Containers are, however, allow to map their ports to a privileged
    ports on the host if the user explicitly declares it. In Docker this is because
    containers are executed with NET_BIND_SERVICE Linux kernel capability which does
    not restrict privileged port mapping. The privileged ports receive and transmit
    various pieces of data which are security sensitive and allowing containers to
    use them is not in line with good security practice.
  remediation: You should not map container ports to privileged host ports when starting
    a container. You should also, ensure that there is no such container to host privileged
    port mapping declarations in the Dockerfile.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
